--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,10 @@
-{{page-title "EmberLesson"}}
-
-{{! The following component displays Ember's default welcome message. }}
-<WelcomePage />
-{{! Feel free to remove this! }}
-
+{{page-title "Lister"}}
+  <h1>Lister App</h1>
+  <nav>
+    <LinkTo @route="index">Home</LinkTo>
+    <LinkTo @route="scientists">Scientists</LinkTo>
+    <LinkTo @route="tech">Tech</LinkTo>
+    <LinkTo @route="programmers">Programmers</LinkTo>
+    <LinkTo @route="rome">Rome</LinkTo>
+  </nav>
 {{outlet}}
